[package]
name = "simple-place"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.21"
egui_dock = "0.4"
egui-winit = "0.21"
egui-wgpu = "0.21"
pollster = "0.2"
wgpu = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.17"
# conf-gen = { path = ".conf-gen/" }
multimap = "0.8.3"
btreemultimap = "0.1.0"